leptos-fluent-macros/tests/ui/leptos_fluent/failing/locales_cfg.stderr
error: The parameter 'locales' of leptos_fluent! macro does not accept the expression path '#[cfg(debug_assertions)]'. Consider to move your configuration to a variable:

       ```rust
       #[cfg(debug_assertions)]
       {
           let locales_dyn = { ... };
       }

       leptos_fluent! {{
           // ...
           locales: locales_dyn,
       }};
       ```
  --> tests/ui/leptos_fluent/failing/locales_cfg.rs:16:9
   |
16 |         #[cfg(debug_assertions)] locales: "../../../../examples/csr-minimal/locales",
   |         ^
